--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -1,6 +1,14 @@
+::: mermaid
 sequenceDiagram
     participant browser
     participant server
+
+    Note right of browser: The usuario escribe algo en el campo de texto y presiona el botón SAVE  
+
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    activate server
+    server-->>browser: Se solicita al navegador que realice una nueva solicitud HTTP GET a la página notes
+    deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
@@ -25,3 +33,5 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes
+:::
+  
